# vectara

./: .clangd  .gitignore  BUILD.bazel  BUILD.md  MODULE.bazel  README.md  WORKSPACE  brpc_workspace.bzl
bazel/: faiss.BUILD
client/: client.go
client/internal/: client.go  client_test.go
database/src/hello/: hello.cc
database/src/index/: faiss_index_test.cc
database/src/server/: BUILD.bazel  server.cc
docs/: TODO.md  build.md  devenv_setup.md  vim_setting.md
proto/: BUILD.bazel  build.sh  helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go  index.proto  rpc_service.proto
server/: server.cc
server/src/client/: BUILD  main.cc
server/src/hello/: BUILD  hello.h  hello_test.cc  run_test.sh
server/src/index/: BUILD  faiss_index.cc  faiss_index.h  faiss_index_test.cc  hnsw_index.cc  hnsw_index.h  hnsw_index_test.cc  hnswlib_index.h
server/src/main/: BUILD  main.cc
server/src/server/: BUILD  rpc_server.cc  rpc_server.h  rpc_server_test.cc  vectara_server.cc  vectara_server.h  vectara_server_test.cc
